# pipes-csv

./: .gitignore  .travis.yml  LICENSE  Makefile  Readme.md  default.nix  pipes-csv.cabal  pipes-csv.nix  shell.nix
Pipes/: Csv.hs
src/Pipes/: Csv.hs
src/Pipes/Csv/: Encoding.hs
test/: test-pipes-csv.hs
test/stdin/: Makefile  Stdin.hs  persons.csv  pipes-csv-stdin-test.cabal
