name:                pipes-csv
version:             1.0.0
license:             MIT
license-file:        LICENSE
author:              William Casarin
maintainer:          will@casarin.me
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -Wall -O2
  exposed-modules:   Pipes.Csv
  build-depends: base >=4.5 && <4.7
               , text >=0.11 && <0.12
               , bytestring >=0.9.2.1 && <0.11
               , cassava >= 0.2 && <0.3
               , pipes >= 4 && <5
  default-language:    Haskell2010

